--- a/_posts/2017-11-15-atualizacao-17-1-3.md
+++ b/_posts/2017-11-15-atualizacao-17-1-3.md
@@ -5,7 +5,7 @@ title: "Atualização 17.1.3"
 image: "/2017/11/atualizacao-2017-1-3.jpg"
 downloads:
   - name: Atualização 17.1.3 by THE
-    link: https://goo.gl/RkzHk6
+    link: https://goo.gl/4NJf7Q
     size: 6.1 MB
   - name: Atualização 17.1.2 by THE
     link: https://goo.gl/RkzHk6
