--- a/_posts/2017-11-15-fat-master-08.md
+++ b/_posts/2017-11-15-fat-master-08.md
@@ -2,7 +2,7 @@
 layout: post
 comments: true
 title: "FAT Master 08"
-image: "/2017/11/fat-master-08.jpg"
+image: "posts/2017/11/fat-master-08.jpg"
 downloads:
   - name: Fat Master 08
     link: https://goo.gl/3nSfGN
