--- a/_posts/2018-02-17-espanha-2018.md
+++ b/_posts/2018-02-17-espanha-2018.md
@@ -3,10 +3,6 @@ layout: post
 comments: true
 title: "Espanha 2018"
 image: "escudos/selecoes/espanha.png"
-downloads:
-  - name: Espanha 2018 by THE
-    link: https://goo.gl/3Ztu6r
-    size: 2.3 MB
 date: 2018-02-17 14:38:40 -0200
 categories: [Atualizações de Elencos]
 ---
@@ -18,3 +14,8 @@ categories: [Atualizações de Elencos]
 Elenco da Espanha 2018 by THE - Compatível com atualização 18.0
 
 Instale por cima da atualização 18.0
+
+<h2>Download</h2>
+<div class="download">
+  <a class="download-button" href="https://goo.gl/3Ztu6r" data-filesize="2.3 MB">Espanha 2018 by THE</a>
+</div>
