--- a/_posts/2017-11-15-atualizacao-17-1-3.md
+++ b/_posts/2017-11-15-atualizacao-17-1-3.md
@@ -3,16 +3,6 @@ layout: post
 comments: true
 title: "Atualização 17.1.3"
 image: "posts/2017/11/atualizacao-2017-1-3.jpg"
-downloads:
-  - name: Atualização 17.1.3 by THE
-    link: https://goo.gl/4NJf7Q
-    size: 6.1 MB
-  - name: Atualização 17.1.2 by THE
-    link: https://goo.gl/RkzHk6
-    size: 514.3 MB
-  - name: "Ultimate DVD"
-    link: https://goo.gl/WL9qPo
-    size: 371.8 MB
 date: 2017-11-15 07:34:06 -0200
 categories: Atualizações
 ---
@@ -33,3 +23,10 @@ Siga a ordem de instalação:
 6º Regenerar usando Fat Master  
 
 Se você já tem o ultimate dvd e a atualização 17.1.2 instalados, instale a 17.1.3 por cima, apague a pasta fifa 08 em documentos e regenere usando o fat master  
+
+<h2>Download</h2>
+<div class="download">
+  <a class="download-button" href="https://goo.gl/4NJf7Q" data-filesize="6.1 MB">Atualização 17.1.3 by THE</a>
+  <a class="download-button" href="https://goo.gl/RkzHk6" data-filesize="514.3 MB">Atualização 17.1.2 by THE</a>
+  <a class="download-button" href="https://goo.gl/WL9qPo" data-filesize="371.8 MB">Ultimate DVD</a>
+</div>
