--- a/_posts/2017-11-15-fat-master-08.md
+++ b/_posts/2017-11-15-fat-master-08.md
@@ -3,12 +3,13 @@ layout: post
 comments: true
 title: "FAT Master 08"
 image: "posts/2017/11/fat-master-08.jpg"
-downloads:
-  - name: Fat Master 08
-    link: https://goo.gl/3nSfGN
-    size: 440 KB
 date: 2017-11-15 10:12:47 -0200
 categories: Ferramentas
 ---
 
 O FAT Master 08 regenera o arquivo fifa.fat e todos os arquivos zdata_xx.bh. Também inclui algumas funções de diagnóstico muito úteis.
+
+<h2>Download</h2>
+<div class="download">
+  <a class="download-button" href="https://goo.gl/3nSfGN" data-filesize="440 KB">Fat Master 08</a>
+</div>
