--- a/_posts/2017-12-31-atualizacao-17-1-4.md
+++ b/_posts/2017-12-31-atualizacao-17-1-4.md
@@ -3,10 +3,6 @@ layout: post
 comments: true
 title: "Atualização 17.1.4"
 image: "posts/2017/12/atualizacao-2017-1-4.jpg"
-downloads:
-  - name: Atualização 17.1.4 by THE
-    link: https://goo.gl/ihSgoC
-    size: 68.9 MB
 date: 2017-12-31 08:54:49 -0200
 categories: Atualizações
 ---
@@ -28,3 +24,8 @@ Siga a ordem de instalação:
 6º Regenerar usando Fat Master  
 
 Se você tem a atualização 17.1.3 instalada, instale a 17.1.4 por cima, apague a pasta fifa 08 em documentos e regenere usando o fat master  
+
+<h2>Download</h2>
+<div class="download">
+  <a class="download-button" href="https://goo.gl/ihSgoC" data-filesize="68.9 MB">Atualização 17.1.4 by THE</a>
+</div>
