--- a/_posts/2018-02-09-boca-juniors-2018.md
+++ b/_posts/2018-02-09-boca-juniors-2018.md
@@ -3,10 +3,6 @@ layout: post
 comments: true
 title: "Boca Juniors 2018"
 image: "escudos/argentina/boca-juniors452.png"
-downloads:
-  - name: Boca Juniors 2018 by THE
-    link: https://goo.gl/kdr1jB
-    size: 2.3 MB
 date: 2018-02-09 17:12:04 -0200
 categories: [Atualizações de Elencos]
 ---
@@ -18,3 +14,8 @@ categories: [Atualizações de Elencos]
 Elencos do Boca Juniors 2018 by THE - Compatível com atualização 18.0
 
 Instale por cima da atualização 18.0
+
+<h2>Download</h2>
+<div class="download">
+  <a class="download-button" href="https://goo.gl/kdr1jB" data-filesize="2.3 MB">Boca Juniors 2018 by THE</a>
+</div>
