--- a/_posts/2018-02-17-alemanha-2018.md
+++ b/_posts/2018-02-17-alemanha-2018.md
@@ -3,10 +3,6 @@ layout: post
 comments: true
 title: "Alemanha 2018"
 image: "escudos/selecoes/alemanha.png"
-downloads:
-  - name: Alemanha 2018 by THE
-    link: https://goo.gl/1aPqy8
-    size: 2.3 MB
 date: 2018-02-17 14:19:59 -0200
 categories: [Atualizações de Elencos]
 ---
@@ -18,3 +14,8 @@ categories: [Atualizações de Elencos]
 Elenco da Alemanha 2018 by THE - Compatível com atualização 18.0
 
 Instale por cima da atualização 18.0
+
+<h2>Download</h2>
+<div class="download">
+  <a class="download-button" href="https://goo.gl/1aPqy8" data-filesize="2.3 MB">Alemanha 2018 by THE</a>
+</div>
