--- a/_posts/2018-03-17-atualizacao-18-1.md
+++ b/_posts/2018-03-17-atualizacao-18-1.md
@@ -47,3 +47,9 @@ Não precisa ter o FIFA, nem Ultimate DVD ou FAT Master instalados.
 Caso encontre algo fora do comum informe que na medida do possível tentarei uma correção na próxima atualização.  
 
 Agradecimentos a Adalberto Caraúna, Wellington Viana e Arnaldo Vinicius por terem contribuído para o desenvolvimento do patch.
+
+<h2>Correção para Windows XP</h2>
+<div class="download">
+  <a class="download-button" href="https://goo.gl/PVU7rz" data-filesize="640 MB">Correção WinXP by THE.exe</a>
+</div>
+Se você usa Windows XP, depois de instalar o patch, baixe e instale este arquivo para corrigir problemas de compatibilidade.
