--- a/_posts/2018-06-19-atualizacao-18-2.md
+++ b/_posts/2018-06-19-atualizacao-18-2.md
@@ -37,11 +37,11 @@ Baixe todas as partes na mesma pasta. Depois abra o arquivo install.exe e siga n
 Quando a instalação for concluída você pode abrir o FIFA 08 pelo ícone na área de trabalho.  
 
 <figure>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/N-8LjzC0RlM" frameborder="0" gesture="media" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/uoB-_IwNQkY" frameborder="0" gesture="media" allowfullscreen></iframe>
 </figure>
 
 <h2>Gameplay</h2> 
 
 <figure>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/N-8LjzC0RlM" frameborder="0" gesture="media" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/rVBZz-7_THE" frameborder="0" gesture="media" allowfullscreen></iframe>
 </figure>
