--- a/_posts/2018-06-19-atualizacao-18-2.md
+++ b/_posts/2018-06-19-atualizacao-18-2.md
@@ -19,18 +19,18 @@ Conteúdo:
 
 <h2>Download</h2>
 <div class="download">
-  <a class="download-button" href="http://bit.do/enmds" data-filesize="300 MB">Parte 1</a>
-  <a class="download-button" href="http://bit.do/enmg2" data-filesize="300 MB">Parte 2</a>
-  <a class="download-button" href="http://bit.do/enmhn" data-filesize="300 MB">Parte 3</a>
-  <a class="download-button" href="http://bit.do/enmhR" data-filesize="300 MB">Parte 4</a>
-  <a class="download-button" href="http://bit.do/enmhV" data-filesize="300 MB">Parte 5</a>
-  <a class="download-button" href="http://bit.do/enmhY" data-filesize="300 MB">Parte 6</a>
-  <a class="download-button" href="http://bit.do/enmh9" data-filesize="300 MB">Parte 7</a>
-  <a class="download-button" href="http://bit.do/enmic" data-filesize="300 MB">Parte 8</a>
-  <a class="download-button" href="http://bit.do/enmie" data-filesize="300 MB">Parte 9</a>
-  <a class="download-button" href="http://bit.do/enmig" data-filesize="294.52 MB">Parte 10</a>
-  <a class="download-button" href="http://bit.do/enmii" data-filesize="1017.5 KB">Parte 11</a>
-  <a class="download-button" href="http://bit.do/enmij" data-filesize="1.71 MB">Parte 12</a>
+  <a class="download-button" href="http://bit.ly/2MrlylU" data-filesize="300 MB">Parte 1</a>
+  <a class="download-button" href="http://bit.ly/2MsKrxF" data-filesize="300 MB">Parte 2</a>
+  <a class="download-button" href="http://bit.ly/2tw9vN4" data-filesize="300 MB">Parte 3</a>
+  <a class="download-button" href="http://bit.ly/2KbcULG" data-filesize="300 MB">Parte 4</a>
+  <a class="download-button" href="http://bit.ly/2Ks62Wo" data-filesize="300 MB">Parte 5</a>
+  <a class="download-button" href="http://bit.ly/2tCCW07" data-filesize="300 MB">Parte 6</a>
+  <a class="download-button" href="http://bit.ly/2yJoCHX" data-filesize="300 MB">Parte 7</a>
+  <a class="download-button" href="http://bit.ly/2IubV3z" data-filesize="300 MB">Parte 8</a>
+  <a class="download-button" href="http://bit.ly/2KjZzzJ" data-filesize="300 MB">Parte 9</a>
+  <a class="download-button" href="http://bit.ly/2Kn5WCA" data-filesize="294.52 MB">Parte 10</a>
+  <a class="download-button" href="http://bit.ly/2KdJCf6" data-filesize="1017.5 KB">Parte 11</a>
+  <a class="download-button" href="http://bit.ly/2tw6snY" data-filesize="1.71 MB">Parte 12</a>
 </div>
 <h2>Instalação</h2>
 Baixe todas as partes na mesma pasta. Depois abra o arquivo install.exe e siga normalmente a instalação.  
