--- a/_posts/2018-07-04-atualizacao-18-3.md
+++ b/_posts/2018-07-04-atualizacao-18-3.md
@@ -17,7 +17,7 @@ Conteúdo:
 
 <h2>Download</h2>
 <div class="download">
-  <a class="download-button" href="http://bit.do/eoTTC" data-filesize="270.92 MB">Atualização 18.3.exe</a>
+  <a class="download-button" href="http://bit.ly/2LQWPHK" data-filesize="270.92 MB">Atualização 18.3.exe</a>
 </div>
 
 <i>Antes de instalar, é preciso que você tenha a atualização 18.2 instalada. Caso não tenha, <a href="{{ relative_url }}/2018/06/atualizacao-18-2/">clique aqui</a>.</i>
