--- a/_posts/2020-04-20-atualizacao-20-2.md
+++ b/_posts/2020-04-20-atualizacao-20-2.md
@@ -28,6 +28,13 @@ Abra o arquivo Atualização 20.2 e siga normalmente a instalação.
 Quando a instalação for concluída, exclua a pasta FIFA 08 em Documentos.  
 Em seguida você pode abrir o jogo pelo ícone na área de trabalho.  
 
+<h2>Importante</h2>
+<i>* Alguns antivírus podem detectar o arquivo como vírus, mas não é. Isso ocorre porque o executável do jogo tem um limite e teve que ser modificado para aceitar as novas edições.  
+É normal isso acontecer.  
+Para resolver, desative temporariamente o antivírus, adicione uma exceção na pasta em que o jogo está instalado e faça novamente a instalação.</i>
+
+<i>* Sempre exclua a pasta FIFA 08 em Documentos depois de fazer a instalação.</i>
+
 <i>* Para o Modo Dirigente/Modo Carreira funcionar corretamente, não marque amistosos durante a carreira.</i>
 
 <h2>Créditos</h2>
