--- a/_posts/2020-04-20-atualizacao-20-2.md
+++ b/_posts/2020-04-20-atualizacao-20-2.md
@@ -31,7 +31,7 @@ Em seguida você pode abrir o jogo pelo ícone na área de trabalho.
 <h2>Importante</h2>
 <i>* Alguns antivírus podem detectar o arquivo como vírus, mas não é. Isso ocorre porque o executável do jogo tem um limite e teve que ser modificado para aceitar as novas edições.  
 É normal isso acontecer.  
-Para resolver, desative temporariamente o antivírus, adicione uma exceção na pasta em que o jogo está instalado e faça a instalação.</i>
+Para resolver, desative temporariamente o antivírus, adicione uma exceção na pasta em que está o jogo e faça a instalação.</i>
 
 <i>* Sempre exclua a pasta FIFA 08 em Documentos depois de fazer a instalação.</i>
 
