--- a/_posts/2020-04-20-atualizacao-20-2.md
+++ b/_posts/2020-04-20-atualizacao-20-2.md
@@ -37,6 +37,8 @@ Para resolver, desative temporariamente o antivírus, adicione uma exceção na 
 
 <i>* Para o Modo Dirigente/Modo Carreira funcionar corretamente, não marque amistosos durante a carreira.</i>
 
+<i>* Se pra você o jogo está fechando na hora de iniciar a partida, instale o <a href="{{ relative_url }}/2017/11/fat-master-08/">FAT Master 08</a> e clique em Tools > Regenerate.</i>
+
 <h2>Créditos</h2>
 Os créditos da atualização também são do amigo Stifler RLK.  
 <a href="https://theproducoes.github.io/redirect?=https://www.youtube.com/channel/UC54BaCKOKH08zcXqsMTQrrQ">Clique aqui e acesse o canal dele no Youtube</a>, se inscreva e deixe like.
