Novo link atualização 19.0

--- a/_posts/2018-12-26-atualizacao-19-0.md
+++ b/_posts/2018-12-26-atualizacao-19-0.md
@@ -22,7 +22,7 @@ Novidades da atualização:
 <h2>Download</h2>
 Baixe todas as partes na mesma pasta.
 <div class="download">
-  <a class="download-button" href="http://bit.ly/2AeutDh" data-filesize="300 MB">Parte 1</a>
+  <a class="download-button" href="http://bit.ly/2LERiWb" data-filesize="300 MB">Parte 1</a>
   <a class="download-button" href="http://bit.ly/2RhzkNP" data-filesize="300 MB">Parte 2</a>
   <a class="download-button" href="http://bit.ly/2GEwEFR" data-filesize="300 MB">Parte 3</a>
   <a class="download-button" href="http://bit.ly/2Q5ZNJA" data-filesize="300 MB">Parte 4</a>
