--- a/_posts/2020-04-20-atualizacao-20-2.md
+++ b/_posts/2020-04-20-atualizacao-20-2.md
@@ -20,7 +20,7 @@ Novidades da atualização:
 
 <h2>Download</h2>
 <div class="download">
-  <a class="download-button" href="https://theproducoes.github.io/redirect?=https://www.mediafire.com/file/7y2wdm0sk6lu1af/Atualiza%E7%E3o_20.2.exe/file" data-filesize="151.06 MB">Atualização 20.2.exe</a>
+  <a class="download-button" href="{{ relative_url }}/redirect?=https://www.mediafire.com/file/7y2wdm0sk6lu1af/Atualiza%E7%E3o_20.2.exe/file" data-filesize="151.06 MB">Atualização 20.2.exe</a>
 </div>
 
 <h2>Instalação</h2>
@@ -41,4 +41,4 @@ Para resolver, desative temporariamente o antivírus, adicione uma exceção na 
 
 <h2>Créditos</h2>
 Os créditos da atualização também são do amigo Stifler RLK.  
-<a href="https://theproducoes.github.io/redirect?=https://www.youtube.com/channel/UC54BaCKOKH08zcXqsMTQrrQ">Clique aqui e acesse o canal dele no Youtube</a>, se inscreva e deixe like.
+<a href="{{ relative_url }}/redirect?=https://www.youtube.com/channel/UC54BaCKOKH08zcXqsMTQrrQ">Clique aqui e acesse o canal dele no Youtube</a>, se inscreva e deixe like.
