--- a/_posts/2020-08-01-atualizacao-20-3.md
+++ b/_posts/2020-08-01-atualizacao-20-3.md
@@ -11,6 +11,7 @@ Novidades da atualização:
 - Atualização de elencos do Brasileirão Série A
 - Atualização de elencos da Euro 2020
 - Euro 2020 no modo torneio
+- Placas de publicidade da Euro 2020
 - Bola da Euro 2020
 - Backgrounds da Euro 2020
 - Scoreboard da Euro 2020
@@ -59,7 +60,7 @@ Em seguida você pode abrir o jogo pelo ícone na área de trabalho.
         <figure>
           <img src="{{ "/assets/img/posts/2020/defender-injector.jpg" | relative_url }}" alt="Defender Injector" title="Defender Injector">
         </figure>
-        Agora você pode fazer o download e instalar as faces. Quando terminar a instalação, execute novamente o arquivo DefenderControl e habilite o Windows Defender:
+        Agora você pode fazer o download e instalar as faces. Após a instalação, execute novamente o arquivo DefenderControl e habilite o Windows Defender:
         <br>
         <br>
         <figure>
