--- a/_posts/2020-08-01-atualizacao-20-3.md
+++ b/_posts/2020-08-01-atualizacao-20-3.md
@@ -20,7 +20,7 @@ Novidades da atualização:
 
 <h2>Download</h2>
 <div class="download">
-  <a class="download-button" href="{{ relative_url }}/redirect?=https://www.mediafire.com/file/qwt13lgtevq7fzi/file" data-filesize="180.13 MB">Atualização 20.3.exe</a>
+  <a class="download-button" href="https://bit.ly/39Ms2J1" onclick="captureOutboundLink('https://bit.ly/39Ms2J1'); return false;" data-filesize="180.13 MB">Atualização 20.3.exe</a>
 </div>
 
 <h2>Instalação</h2>
@@ -38,7 +38,7 @@ Em seguida você pode abrir o jogo pelo ícone na área de trabalho.
     <div class="panel-content">
         <h2>Download</h2>
         <div class="download">
-          <a class="download-button" href="{{ relative_url }}/redirect?=https://www.mediafire.com/file/j6l59x511d5zg45/file" data-filesize="34.58 MB">
+          <a class="download-button" href="https://bit.ly/33bThLH" onclick="captureOutboundLink('https://bit.ly/33bThLH'); return false;" data-filesize="34.58 MB">
         Faces 20.3.zip</a>
         </div>
         <h2>Instalação</h2>
@@ -48,7 +48,7 @@ Em seguida você pode abrir o jogo pelo ícone na área de trabalho.
         <i>* Em alguns casos o antivírus/Windows Defender pode bloquear o download e instalação das faces. Se isso acontecer é preciso desativar temporariamente o Windows Defender e adicionar uma exceção na pasta onde o jogo está instalado. Se você tem alguma dúvida de como fazer isso, siga o tutorial abaixo:</i>
         <br>
         <br>
-        Baixe e extraia o <a href="{{ relative_url }}/redirect?=https://www.mediafire.com/file/hqh1k3cl484sfv5/file">DefenderControl</a>. Depois de extrair, execute o arquivo DefenderControl como Administrador e clique em Desabilitar Windows Defender:
+        Baixe e extraia o <a href="https://bit.ly/3geEjYW" onclick="captureOutboundLink('https://bit.ly/3geEjYW'); return false;">DefenderControl</a>. Depois de extrair, execute o arquivo DefenderControl como Administrador e clique em Desabilitar Windows Defender:
         <br>
         <br>
         <figure>
@@ -73,4 +73,4 @@ Em seguida você pode abrir o jogo pelo ícone na área de trabalho.
 
 <h2>Créditos</h2>
 Os créditos da atualização também são do amigo Stifler RLK.  
-<a href="{{ relative_url }}/redirect?=https://www.youtube.com/channel/UC54BaCKOKH08zcXqsMTQrrQ">Clique aqui e acesse o canal dele no Youtube</a>, se inscreva e deixe like.
+<a href="https://www.youtube.com/channel/UC54BaCKOKH08zcXqsMTQrrQ" onclick="captureOutboundLink('https://www.youtube.com/channel/UC54BaCKOKH08zcXqsMTQrrQ'); return false;">Clique aqui e acesse o canal dele no Youtube</a>, se inscreva e deixe like.
