--- a/_posts/2020-01-28-atualizacao-20-1.md
+++ b/_posts/2020-01-28-atualizacao-20-1.md
@@ -16,7 +16,7 @@ Novidades da atualização:
 
 <h2>Download</h2>
 <div class="download">
-  <a class="download-button" href="{{ relative_url }}/redirect?=https://www.mediafire.com/file/bavahnd1rrc5suh/Atualiza%E7%E3o_20.1.exe/file" data-filesize="31.74 MB">Atualização 20.1.exe</a>
+  <a class="download-button" href="https://bit.ly/39KxgVu" onclick="captureOutboundLink('https://bit.ly/39KxgVu'); return false;" data-filesize="31.74 MB">Atualização 20.1.exe</a>
 </div>
 
 <h2>Instalação</h2>
@@ -28,4 +28,4 @@ Em seguida você pode abrir o jogo pelo ícone na área de trabalho.
 
 <h2>Créditos</h2>
 Os créditos da atualização são do amigo Stifler RLK.  
-<a href="{{ relative_url }}/redirect?=https://www.youtube.com/channel/UC54BaCKOKH08zcXqsMTQrrQ">Clique aqui e acesse o canal dele no Youtube</a>, se inscreva e deixe like.
+<a href="https://www.youtube.com/channel/UC54BaCKOKH08zcXqsMTQrrQ" onclick="captureOutboundLink('https://www.youtube.com/channel/UC54BaCKOKH08zcXqsMTQrrQ'); return false;">Clique aqui e acesse o canal dele no Youtube</a>, se inscreva e deixe like.
